objects/PMC_DH_CheckoutConfig__mdt.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistAPI_Name__c</fullName>
        <label>PicklistAPI_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMC_DH_CheckoutConfig</label>
    <pluralLabel>PMC_DH_CheckoutConfigs</pluralLabel>
</CustomObject>